--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - 'main'
       - 'release-**'
+      - 'arm64'
     tags:
       - '*'
 
@@ -32,10 +33,10 @@ jobs:
 
     - name: Test
       run: make test
-   
+
     # Only try to publish the container image from the root repo; forks don't have permission to do so and will always get failures.
     - name: Publish container image
-      if: github.repository == 'vmware-tanzu/velero-plugin-for-csi'
+      if: github.repository == 'akash5474/velero-plugin-for-csi'
       run: |
         docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
         ./hack/docker-push.sh
